Upgrade of init and core to ae2 v19